fixing the z-index problem for the edition picker when there is a thrasher

--- a/static/src/stylesheets/layout/_ab-new-header-test-variant.scss
+++ b/static/src/stylesheets/layout/_ab-new-header-test-variant.scss
@@ -204,7 +204,7 @@ $gutter-large: 55px;
     padding-top: $gs-baseline/2;
     padding-left: $gs-gutter / 2;
     width: gs-span(2);
-    z-index: 3;
+    z-index: $zindex-sticky;
 
     // Smaller size compensates for how big the word "Australia" is
     @include mq($until: $mobile-medium) {
